# CyberArk-TPC-Plugin-Validator

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  publish.yml  sonarqube-analysis.yml  uv.yml
.sonarlint/: connectedMode.json
tests/: test_conditions_section_rule_set.py  test_cpm_paramerter_rule_sets.py  test_cpm_parameters_validation_section_rule_set.py  test_debug_information_section_rule_set.py  test_lexer.py  test_logging_rule_sets.py  test_paramerter_rule_sets.py  test_parameters_rule_sets.py  test_parameters_section_rule_set.py  test_parser.py  test_process_file_rule_set.py  test_process_rule_set.py  test_prompts_file_rule_set.py  test_prompts_rule_set.py  test_states_rule_sets.py  test_states_section_rule_set.py  test_transition_rule_set.py  test_transitions_section_rule_set.py  test_validation_result.py  test_validator.py
tests/data/: conditions-invalid-process.ini  conditions-invalid-prompts.ini  cpm-parameters-validation-invalid-process.ini  cpm-parameters-validation-invalid-prompts.ini  debug-information-invalid-process.ini  invalid-process-alt.ini  invalid-process-alt2.ini  invalid-process.ini  invalid-prompts.ini  parameter-invalid-process.ini  parameter-invalid-process2.ini  parameter-invalid-process3.ini  parameter-invalid-prompts.ini  process-file-invalid-process.ini  prompts-file-invalid-process.ini  prompts-file-invalid-prompts.ini  states-invalid-process.ini  transitions-invalid-process.ini  transitions-invalid-prompts.ini  valid-process-alt.ini  valid-process.ini  valid-prompts-alt.ini  valid-prompts.ini
tests/data/CRITICAL-LoggingEnabledViolation/: process.ini
tests/data/CRITICAL-ParametersMaxInvalidValueViolation/: process.ini
tests/data/CRITICAL-ParametersMaxLessThanZeroViolation/: process.ini
tests/data/CRITICAL-ParametersMinGreaterThanMaxViolation/: process.ini
tests/data/CRITICAL-ParametersMinInvalidValueViolation/: process.ini
tests/data/CRITICAL-ParametersMinLessThanZeroViolation/: process.ini
tests/data/CRITICAL-ParametersNoParametersSectionViolation/: process.ini
tests/data/CRITICAL-StatesEndStateCaseViolation-NoValue/: process.ini
tests/data/CRITICAL-StatesEndStateCaseViolation-WithValue/: process.ini
tests/data/CRITICAL-StatesEndStateValueViolation/: process.ini
tests/data/CRITICAL-StatesFailStateViolation/: process.ini
tests/data/CRITICAL-StatesNoStatesSectionViolation/: process.ini
tests/data/CRITICAL-TransitionNoSectionViolation/: process.ini
tests/data/INFO-LoggingEnabledViolation/: process.ini
tests/data/OK-CPMParameter/: process.ini  prompts.ini
tests/data/OK-Logging/: process.ini
tests/data/OK-LoggingNoSection/: process.ini
tests/data/OK-Parameter/: process.ini
tests/data/OK-Process-Parses/: process.ini
tests/data/OK-ProcessDefaultContent-WithComment/: process.ini
tests/data/OK-ProcessDefaultContent-WithoutComment/: process.ini
tests/data/OK-PromptsDefaultContent-WithComment/: prompts.ini
tests/data/OK-PromptsDefaultContent-WithoutComment/: process.ini
tpc_plugin_validator/: ini_parser.py  main.py  parser.py  process.py  prompts.py  severity.py  validation_result.py  validator.py
tpc_plugin_validator/lexer/: lexer.py
tpc_plugin_validator/parser/: parser.py
tpc_plugin_validator/rule_sets/: conditions_section_rule_set.py  cpm_parameter.py  cpm_parameters_validation_section_rule_set.py  debug_information_section_rule_set.py  file_rule_set.py  logging.py  parameter.py  parameters.py  parameters_section_rule_set.py  process.py  process_file_rule_set.py  prompts.py  prompts_file_rule_set.py  rule_set.py  section_rule_set.py  states.py  states_section_rule_set.py  transitions.py  transitions_section_rule_set.py
tpc_plugin_validator/rules/: logging_validation.py
tpc_plugin_validator/utilities/: exceptions.py  invalid_words.py  severity.py  types.py  validation_result.py
(+47 files in other folders)
