[project]
name = "cyberark-tpc-plugin-validator"
version = "1.0.1"
description = "A tool to help validate a custom CyberArk TPC plugin."
keywords = ["cyberark", "validate", "tpc"]
authors = [{ name = "Peter McDonald", email = "git@petermcdonald.co.uk"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "cyberark-tpc-plugin-parser>=0.3.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/petermcd/CyberArk-TPC-Plugin-Validator"
repository = "https://github.com/petermcd/CyberArk-TPC-Plugin-Validator.git"
issues = "https://github.com/petermcd/CyberArk-TPC-Plugin-Validator/issues"

[dependency-groups]
dev = [
    "pygments>=2.20.0", # Pinned to resolve security issue
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mypy-plugins>=4.0.0",
    "ruff>=0.15.8",
    "troml>=0.4.1",
    "ty>=0.0.26",
]

[project.scripts]
tpc-validator = "tpc_plugin_validator.main:main"

[tool.pytest.ini_options]
addopts = "--cov=tpc_plugin_validator --cov-report term-missing --cov-report xml:coverage.xml"

[tool.ruff]
line-length = 120
